# Bondify-app

./: .gitignore  Dockerfile
Bondify/: Cargo.toml
Bondify-server/: Cargo.toml
Bondify/src/: main.rs
bondify-client/: .env  1.0.0  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
bondify-client/src/: App.tsx  main.tsx
bondify-client/src-tauri/: 2  Cargo.toml  tauri.conf.json  userData.enc
bondify-client/src-tauri/src/: main.rs
bondify-client/src-tauri/src/commands/: commands.rs
bondify-client/src-tauri/src/locales/ru/: ru.json
bondify-client/src-tauri/src/modules/: mod.rs
bondify-client/src-tauri/src/modules/user/: user.rs
bondify-client/src/locales/: en.json  languages.json
bondify-client/src/modules/login-block/: LoginBlock.module.scss  LoginBlock.tsx  index.tsx
bondify-client/src/modules/login-block/locales/: en.json  ru.json
bondify-client/src/modules/social-auth-button/: SocialAuthButton.module.scss  SocialAuthButton.tsx  index.tsx
bondify-client/src/modules/user-context/: UserContext.tsx
bondify-client/src/pages/home/: Home.tsx  HomePage.tsx  index.tsx
bondify-client/src/pages/login/: Login.module.scss  LoginPage.tsx
bondify-client/src/pages/login_app/: LoginAppPage.tsx  index.tsx
bondify-client/src/scripts/: i18n.js  i18n.ts  types.ts
bondify-client/src/style/: LoginBlock.module.css  _fonts.scss  _vars.scss
