[package]
name = "Bondify"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
[[bin]]
name = "Bondify"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"